@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.5.5"
+  "version": "3.2.5.6"
 }
