@@ -70,6 +70,7 @@
     "*://*.atavist.com/*",
     "*://*.atlantico.fr/*",
     "*://*.augsburger-allgemeine.de/*",
+    "*://*.auto-motor-und-sport.de/*",
     "*://*.automobilwoche.de/*",
     "*://*.autonews.com/*",
     "*://*.autoplus.fr/*",
@@ -743,5 +744,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.5.5"
+  "version": "3.2.5.6"
 }
