@@ -2,6 +2,7 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add Auto-motor-und-sport.de
 Add Money.it
 Add Schwarzwaelder-bote.de & Stuttgarter-nachrichten.de
 Fix Australian Community Media (css)
